# spindle

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml
.github/workflows/: release.yml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tmp-smoke.db-shm  tmp-smoke.db-wal
backend/src/: app.ts  baseline.ts  cache.ts  config.ts  import-playlists.ts  import-spotify.ts  server.ts
backend/src/auth/: hash-cli.ts  index.ts  password.ts  rate-limit.ts  session.ts
backend/src/cover/: proxy.ts  subsonic.ts
backend/src/db/: navidrome-db.ts  stats-db.ts
backend/src/events/: ingest-schema.ts  store.ts
backend/src/import/: normalize.ts  spotify.ts
backend/src/routes/: album.ts  cover.ts  entity.ts  ingest.ts  scrobble.ts  shares.ts  stats.ts  stream.ts
backend/src/shares/: render.ts  store.ts
backend/src/stats/: entity.ts  heatmap.ts  recent.ts  sessions.ts  timeframe.ts  timeseries.ts  tops.ts  totals.ts
docs/: DEPLOY.md
plugin/: Cargo.toml  README.md  manifest.json
plugin/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts  types.ts
web/src/components/: AppShell.vue  CoverArt.vue  CoverGrid.vue  ListActionBar.vue  NowPlayingBars.vue  PlayerBar.vue  RangeBar.vue  RankedList.vue  SearchInput.vue  ShareToast.vue  SideNav.vue  StatTile.vue  VinylRecord.vue
web/src/composables/: useCoverAccent.ts  usePlayEntity.ts  useRangedResource.ts  useShare.ts  useSharePlayer.ts
web/src/lib/: accent.ts  (+3 more)
(+39 files in other folders)
